--- a/epic_event/templates/contract/contract_detail.html
+++ b/epic_event/templates/contract/contract_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load rest_framework %}
-
+{% load static %}
 {% block content %}
 
 <h1>Contract - {{ contract }}</h1>
@@ -12,6 +12,7 @@
   <span class="slider round"></span>
     </form>
 </label>
+
 
 <form method="POST">
     {% csrf_token %}
@@ -28,7 +29,7 @@
     </div>
 
         {% if contract.event_associated == "uncomplete" %}
-        <a href="{% url 'event_create' contract.id %}"><button>Add an event</button></a>
+            <a href="{% url 'event_create' contract.id %}"><button>Add an event</button></a>
         {% else %}
         <p> a {{contract.event_associated}} contract.id</p>
         {% include 'event/event_snippet.html' with contract=contract %}
