--- a/epic_event/templates/contract/contract_snippet.html
+++ b/epic_event/templates/contract/contract_snippet.html
@@ -1,4 +1,10 @@
-    <div class="snippet">
+{% load static %}
+
+
+<div class="snippet">
+
+    <img class="snippet_img_bg" src="{% static 'images/contract/contract_bg_light.png'%}">
+
         <p class="date">last_update : {{ contract.date_updated }}</p>
 <table>
     {% if contract.name%}
