--- a/static/app.css
+++ b/static/app.css
@@ -124,9 +124,8 @@ h2 {
 
 /* Style page content */
 .main {
-    position : relative;
-    margin:auto;
-    width:70%;
+    min-width: 700px;
+    width: 50%;
     padding: 20px;
 }
 
@@ -159,6 +158,7 @@ h2 {
 .feed {
     /*display:grid;*/
     /*grid-template-columns: repeat(3, 100%);*/
+    position: relative;
     padding: 20px;
     text-align: center;
     border: 2px solid #01094d;
