--- a/epic_event/templates/contract/contract_snippet.html
+++ b/epic_event/templates/contract/contract_snippet.html
@@ -35,15 +35,15 @@
                 <td>{{ contract.amount }}</td>
             </tr>
             <tr>
-                <td class="td-infos">payment_due</td>
+                <td class="td-infos">payment_due :</td>
                 <td>{{ contract.payment_due }}</td>
             </tr>
             <tr>
-                <td class="td-infos">date_created</td>
+                <td class="td-infos">date_created :</td>
                 <td>{{ contract.date_created }}</td>
             </tr>
             <tr>
-                <td class="td-infos">status</td>
+                <td class="td-infos">status :</td>
                 <td>{{ contract.status }} contract = {{ contract.id }}</td>
             </tr>
         </tbody>
