--- a/epic_event/templates/customer/customer_snippet.html
+++ b/epic_event/templates/customer/customer_snippet.html
@@ -47,15 +47,15 @@
                 <td>{{ customer.phone }}</td>
             </tr>
             <tr>
-                <td class="td-infos">email</td>
+                <td class="td-infos">email :</td>
                 <td>{{ customer.email }}</td>
             </tr>
             <tr>
-                <td class="td-infos">date_created</td>
+                <td class="td-infos">date_created :</td>
                 <td>{{ customer.date_created }}</td>
             </tr>
             <tr>
-                <td class="td-infos">status</td>
+                <td class="td-infos">status :</td>
                 <td>{{ customer.status }}</td>
             </tr>
 </table>
