--- a/epic_event/templates/customer/customer_list.html
+++ b/epic_event/templates/customer/customer_list.html
@@ -2,12 +2,16 @@
 {% load rest_framework %}
 {% load review_extras %}
 {% block content %}
-    <h2>Customer List of {{ request.user.first_name }} {{ request.user.last_name }} - {{ request.user.team }}</h2>
-    <div class="grid-container">
+    <h2>Customer list of {{ request.user.first_name }} {{ request.user.last_name }} - {{ request.user.team }}</h2>
+
+    <div class="btn-group btn-group-justified">
+        <a href="{% url 'customer_list' %}"><button class="btn btn-primary" style="width: 33.3%">All customers</button></a>
+        <a href="{% url 'my_customer_list' %}"><button class="btn btn-primary" style="width: 33.3%">Related to me</button></a>
+        <a href="{% url 'unactive_customer_list' %}"><button class="btn btn-primary" style="width: 33.3%">Unactive</button></a>
+    </div>
+    <div class="feed">
     {% for customer in customers %}
-        <div class="snippet">
         {% include 'customer/customer_snippet.html' with customer=customer %}
-        </div>
         {% if request.user.team == management %}
             <div class = "edit-button">
                 <a href="{% url 'customer_detail' customer.id %}"><button>Modifier</button></a>
@@ -15,6 +19,6 @@
             </div>
         {% endif %}
     {% endfor %}
+         {% include 'partials\page_navigator.html' %}
     </div>
-     {% include 'partials\page_navigator.html' %}
 {% endblock content %}
