--- a/epic_event/templates/user/user_snippet.html
+++ b/epic_event/templates/user/user_snippet.html
@@ -5,6 +5,8 @@
         <img class="snippet_img_bg" src="{% static 'images/users/management_user.png'%}">
     {% elif  user.team == 'support' %}
         <img class="snippet_img_bg" src="{% static 'images/users/user_support.png'%}">
+    {% elif  user.team == 'sales' %}
+        <img class="snippet_img_bg" src="{% static 'images/users/sales_user.png'%}">
     {% endif %}
         <p>username : {{ user.username }}</p>
         <p>team : {{ user.team }}</p>
