--- a/static/app.css
+++ b/static/app.css
@@ -124,6 +124,8 @@ h2 {
 
 /* Style page content */
 .main {
+    position: relative;
+    float: left;
     min-width: 700px;
     width: 50%;
     padding: 20px;
@@ -251,7 +253,6 @@ h2 {
     margin: 0 auto;
 }
 
-
 .snippet .td-infos {
     font-size: 0.8em;
     font-style: italic;
@@ -260,27 +261,6 @@ h2 {
 .snippet table {
     min-height: 12em;
 }
-/*.snippet .ongoing-contracts {*/
-/*    position:absolute;*/
-/*    display: block;*/
-/*    right:0;*/
-/*    bottom: 0;*/
-/*}*/
-
-/*.snippet .add-contract {*/
-/*    position:absolute;*/
-/*    display: block;*/
-/*    right:0;*/
-/*    bottom: 0;*/
-/*}*/
-
-/*.snippet .customer-detail {*/
-/*    position:absolute;*/
-/*    display: block;*/
-/*    right:0;*/
-/*    bottom: 0;*/
-/*}*/
-
 
 .snippet .edit-button button {
     position:relative;
@@ -304,28 +284,27 @@ h2 {
     bottom: 50%;
     left: 90%;
     background-color: #01094d;
-  border: none;
+    border: none;
     border-radius: 5px;
-  color: white;
-    /*width: 140px;*/
-  padding: 15px 30px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 1.2em;
+      color: white;
+      padding: 15px 30px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1.2em;
 }
 
 .submit-form button {
-    background-color: #670000;
+    background-color: #fd4343;
   border: none;
     border-radius: 5px;
   color: white;
-    /*width: 140px;*/
-  padding: 15px 30px;
+  padding: 5px 30px 15px 30px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.2em;
+    height : 2em
 }
 
 
@@ -367,8 +346,6 @@ h2 {
 
 .form button{
     position: sticky;
-    /*bottom: 50%;*/
-    /*right: 90%;*/
     background-color: #01094d;
   border: none;
     border-radius: 5px;
@@ -492,3 +469,105 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.btn-group .btn-group-justified button {
+  background-color: #ffffff; /* Green background */
+  border: 2px solid #01094d; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+}
+
+.btn .btn-primary {
+  background-color: #ffffff; /* Green background */
+  border: 2px solid #01094d; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  cursor: pointer; /* Pointer/hand icon */
+  float: left; /* Float the buttons side by side */
+}
+
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Add a background color on hover */
+.btn-group button:hover {
+  background-color: #3e8e41;
+}
+
+.toggle-btn{
+    position: relative;
+    left: 0;
+    width : 15%;
+    height: 3.5em;
+    background-color : #ffffff;
+    text-align: center;
+    border-radius: 5px;
+    border-width: 1px;
+}
+
+.toggle-btn img{
+    position: relative;
+    right: 0;
+    width : auto;
+    height: 3em;
+    background-color : #ffffff;
+    text-align: center;
+    border-radius: 5px;
+    border-width: 1px;
+}
+
+.update-form {
+    position: relative;
+    min-height: 12em;
+    border: 2px solid #01094d;
+    border-radius: 5px;
+    background-color: rgb(217, 217, 217);
+    color: #000000;
+    text-align: left;
+    margin: 10px;
+    padding: 10px;
+
+}
+
+
+.update-form .update-button {
+    position: relative;
+    float:left;
+    height: 3em;
+    min-width:10%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.update-form .delete-button {
+    position: relative;
+    float:inherit;
+    height: 3em;
+    min-width:10%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.right-side {
+    position: relative;
+    float: left;
+}
+
+/*.edit-button .edit-button {*/
+/*    width : 100%;*/
+/*    min-height: 3em;*/
+/*    background-color : #ffffff;*/
+/*    text-align: center;*/
+/*    border-radius: 5px;*/
+/*    border-width: 1px;*/
+/*}*/
