--- a/templates/base.html
+++ b/templates/base.html
@@ -35,26 +35,7 @@
                           <a href="{% url 'user_create' %}">New</a>
                         </div>
                     </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Contracts<i class="fa fa-caret-down"></i></button>
-                        <div class="dropdown-content">
-                          <a href="{% url 'contract_list' %}">Browse</a>
-                {% if request.user.team != "management" %}
-                          <a href="{% url 'my_contract_list' %}">My contracts</a>
-                              {%  endif %}
-                            <a href="{% url 'no_event_contract_list' %}">Contracts without event</a>
-                        </div>
-                </div>
-                <div class="dropdown">
-                    <button class="dropbtn">Customers<i class="fa fa-caret-down"></i></button>
-                        <div class="dropdown-content">
-                          <a href="{% url 'customer_list' %}">Browse</a>
-                            <a href="{% url 'customer_create' %}">New</a>
-                            {% if request.user.team != "management" %}
-                            <a href="{% url 'my_customer_list' %}">My customers</a>
-                            {%  endif %}
-                        </div>
-                </div>
+
                 <div class="dropdown">
                     <button class="dropbtn">Events<i class="fa fa-caret-down"></i></button>
                         <div class="dropdown-content">
@@ -66,6 +47,27 @@
                             <a href="{% url 'unassigned_event_list'%}">Unassigned events</a>
                             {% endif %}
                         </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">Contracts<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-content">
+                          <a href="{% url 'contract_list' %}">Browse</a>
+                {% if request.user.team != "management" %}
+                          <a href="{% url 'my_contract_list' %}">My contracts</a>
+                              {%  endif %}
+                            <a href="{% url 'no_event_contract_list' %}">Contracts without event</a>
+                        </div>
+                </div>
+                <div class="dropdown">
+                <button class="dropbtn">Customers<i class="fa fa-caret-down"></i></button>
+                        <div class="dropdown-content">
+                          <a href="{% url 'customer_list' %}">Browse</a>
+                            <a href="{% url 'customer_create' %}">New</a>
+                            {% if request.user.team != "management" %}
+                            <a href="{% url 'my_customer_list' %}">My customers</a>
+                            {%  endif %}
+                        </div>
+
                 </div>
                 <a href="{% url 'home' %}">Accueil</a>
                 <div class="submit-form">
@@ -88,6 +90,9 @@
         <h3>{{ flash }}</h3>
         {% endif %}
             {% block content %}{% endblock content %}
+        </div>
+        <div class="right-side">
+        {% block right-side %}{% endblock right-side %}
         </div>
     </body>
 </html>
