--- a/epic_event/templates/customer/customer_create.html
+++ b/epic_event/templates/customer/customer_create.html
@@ -4,10 +4,16 @@
 {% block content %}
 
 <h1>Create a new customer</h1>
-
-<form action="{% url 'customer_create' %}" method="POST">
-    {% csrf_token %}
-    {% render_form serializer %}
-    <input type="submit" name="create_customer" value="Save">
-</form>
+<div class="update-form">
+    <form action="{% url 'customer_create' %}" method="POST">
+        {% csrf_token %}
+        {% render_form serializer %}
+        <input class="update-button" type="submit" name="create_customer" value="Save">
+    </form>
+</div>
 {% endblock content %}
+
+{% block right-side %}
+
+
+{% endblock right-side %}
